dataset1235/2025-2/1955397009/users/4276496853/executions/1107611404_4233865845.log
== RUN (2025-08-15 02:34:14)
-- CODE: 
celsius float(input("Digite os graus"))

Fahrenheint = Celsius * 9/5 + 32
print(Fahrenheint)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 1
    celsius float(input("Digite os graus"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 1
    celsius float(input("Digite os graus"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 1
    celsius float(input("Digite os graus"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 1
    celsius float(input("Digite os graus"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    celsius float(input("Digite os graus"))
            ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 1
    celsius float(input("Digite os graus"))
            ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:34:33)
-- CODE: 
celsius= float(input("Digite os graus"))

Fahrenheint = Celsius * 9/5 + 32
print(Fahrenheint)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheint = Celsius * 9/5 + 32
                  ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheint = Celsius * 9/5 + 32
                  ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheint = Celsius * 9/5 + 32
                  ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheint = Celsius * 9/5 + 32
                  ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheint = Celsius * 9/5 + 32
                  ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheint = Celsius * 9/5 + 32
                  ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:43:36)
-- CODE: 
celsius = float(input())

Fahrenheit = celsius * 9/5 + 32
print(round(Fahrenheit, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:43:17)
-- CODE: 
celsius = float(input())

Fahrenheit = celsius * 9/5 + 32
print(round(Fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 4
    print(round(Fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 4
    print(round(Fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 4
    print(round(Fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 4
    print(round(Fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 4
    print(round(Fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 4
    print(round(Fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:40:33)
-- CODE: 
celsius = float(input())

Fahrenheit = celsius * 9/5 + 32
print(f"{Fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:40:22)
-- CODE: 
celsius = float(input())

Fahrenheit = celsius * 9/5 + 32
print(f"{Fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 02:40:36)
-- CODE: 
celsius = float(input())

Fahrenheit = celsius * 9/5 + 32
print(f"{Fahrenheit:.2f}")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.00
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.00
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.00
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.00
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 02:44:50)
-- CODE: 
celsius = float(input())

Fahrenheit = celsius * 9/5 + 32
print(round(Fahrenheit, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:39:40)
-- CODE: 
celsius = float(input())

Fahrenheit = Celsius * 9/5 + 32
print(f"{Fahrenheit:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 02:37:50)
-- CODE: 
celsius = float(input())

Fahrenheit = Celsius * 9/5 + 32
print(Fahrenheit)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Fahrenheit = Celsius * 9/5 + 32
                 ^^^^^^^
NameError: name 'Celsius' is not defined. Did you mean: 'celsius'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
